# Recruit

./: .gitignore  README.md  pyproject.toml
profil_logger/: __init__.py  handlers.py  logger.py
recruitment-task-backend-internship/: EXERCISES.md
recruitment-task-backend-internship/profil_logger/: __init__.py  handlers.py  logger.py
tests/: test_handlers.py  test_logentry.py  test_logger.py  test_reader.py
